@@ -80,6 +80,18 @@ syntax(number-2) :-
 
 
 		 /*******************************
+		 *	       WRITE		*
+		 *******************************/
+
+write_test(q-1) :-
+	term_to_atom(-(0), X), X == '-(0)'.
+write_test(q-2) :-
+	term_to_atom(+(0), X), X == '+(0)'.
+write_test(q-3) :-
+	term_to_atom(+(a), X), X == '+a'.
+
+
+		 /*******************************
 		 *	       UNIFY		*
 		 *******************************/
 
@@ -1469,6 +1481,7 @@ script_failed(File, Except) :-
 		 *******************************/
 
 testset(syntax).
+testset(write_test).
 testset(unify).
 testset(arithmetic).
 testset(arithmetic_functions).
