@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Quoted write of -(0) and similar cases.  Mike Elston.
+
   * ADDED: Exporting operators from modules.
 
   * ADDED: flag called generate_debug_info and commandline option -nodebug.
